version/0.1/_sources/examples/legacy_standalone/05_Plot_nets.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\legacy_standalone\05_Plot_nets.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_legacy_standalone_05_Plot_nets.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_legacy_standalone_05_Plot_nets.py:


EDB: plot nets with Matplotlib
------------------------------
This example shows how you can use the ``Edb`` class to plot a net or a layout.

.. GENERATED FROM PYTHON SOURCE LINES 8-11

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports, which includes importing a section.

.. GENERATED FROM PYTHON SOURCE LINES 11-16

.. code-block:: default


    import pyedb
    from pyedb.generic.general_methods import generate_unique_folder_name
    from pyedb.misc.downloads import download_file








.. GENERATED FROM PYTHON SOURCE LINES 17-20

Download file
~~~~~~~~~~~~~
Download the AEDT file and copy it into the temporary folder.

.. GENERATED FROM PYTHON SOURCE LINES 20-26

.. code-block:: default


    temp_folder = generate_unique_folder_name()

    targetfolder = download_file("edb/ANSYS-HSD_V1.aedb", destination=temp_folder)









.. GENERATED FROM PYTHON SOURCE LINES 27-30

Launch EDB
~~~~~~~~~~
Launch the :class:`pyedb.Edb` class, using EDB 2023 R2 and SI units.

.. GENERATED FROM PYTHON SOURCE LINES 30-33

.. code-block:: default


    edb = pyedb.Edb(edbpath=targetfolder, edbversion="2023.2")








.. GENERATED FROM PYTHON SOURCE LINES 34-37

Plot custom set of nets colored by layer
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Plot a custom set of nets colored by layer (default).

.. GENERATED FROM PYTHON SOURCE LINES 37-40

.. code-block:: default


    edb.nets.plot("AVCC_1V3")




.. image-sg:: /examples/legacy_standalone/images/sphx_glr_05_Plot_nets_001.png
   :alt: main
   :srcset: /examples/legacy_standalone/images/sphx_glr_05_Plot_nets_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 41-44

Plot custom set of nets colored by nets
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Plot a custom set of nets colored by nets.

.. GENERATED FROM PYTHON SOURCE LINES 44-47

.. code-block:: default


    edb.nets.plot(["GND", "GND_DP", "AVCC_1V3"], color_by_net=True)




.. image-sg:: /examples/legacy_standalone/images/sphx_glr_05_Plot_nets_002.png
   :alt: main
   :srcset: /examples/legacy_standalone/images/sphx_glr_05_Plot_nets_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 48-51

Plot all nets on a layer colored by nets
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Plot all nets on a layer colored by nets

.. GENERATED FROM PYTHON SOURCE LINES 51-54

.. code-block:: default


    edb.nets.plot(None, ["1_Top"], color_by_net=True, plot_components_on_top=True)




.. image-sg:: /examples/legacy_standalone/images/sphx_glr_05_Plot_nets_003.png
   :alt: main
   :srcset: /examples/legacy_standalone/images/sphx_glr_05_Plot_nets_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 55-58

Plot stackup and some padstack definition
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Plot all nets on a layer colored by nets

.. GENERATED FROM PYTHON SOURCE LINES 58-61

.. code-block:: default


    edb.stackup.plot(scale_elevation=False, plot_definitions=["c100hn140", "c35"])




.. image-sg:: /examples/legacy_standalone/images/sphx_glr_05_Plot_nets_004.png
   :alt: Stackup  
   :srcset: /examples/legacy_standalone/images/sphx_glr_05_Plot_nets_004.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <module 'matplotlib.pyplot' from 'C:\\actions-runner\\_work\\pyedb\\pyedb\\.venv\\lib\\site-packages\\matplotlib\\pyplot.py'>



.. GENERATED FROM PYTHON SOURCE LINES 62-65

Close EDB
~~~~~~~~~
Close EDB.

.. GENERATED FROM PYTHON SOURCE LINES 65-67

.. code-block:: default


    edb.close_edb()




.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 12.844 seconds)


.. _sphx_glr_download_examples_legacy_standalone_05_Plot_nets.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 05_Plot_nets.py <05_Plot_nets.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 05_Plot_nets.ipynb <05_Plot_nets.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
