version/0.17/_sources/examples/legacy_standalone/05_Plot_nets.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\legacy_standalone\05_Plot_nets.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_legacy_standalone_05_Plot_nets.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_legacy_standalone_05_Plot_nets.py:


EDB: plot nets with Matplotlib
------------------------------
This example shows how you can use the ``Edb`` class to plot a net or a layout.

.. GENERATED FROM PYTHON SOURCE LINES 30-33

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports, which includes importing a section.

.. GENERATED FROM PYTHON SOURCE LINES 33-38

.. code-block:: Python


    import pyedb
    from pyedb.generic.general_methods import generate_unique_folder_name
    from pyedb.misc.downloads import download_file








.. GENERATED FROM PYTHON SOURCE LINES 39-42

Download file
~~~~~~~~~~~~~
Download the AEDT file and copy it into the temporary folder.

.. GENERATED FROM PYTHON SOURCE LINES 42-48

.. code-block:: Python


    temp_folder = generate_unique_folder_name()

    targetfolder = download_file("edb/ANSYS-HSD_V1.aedb", destination=temp_folder)









.. GENERATED FROM PYTHON SOURCE LINES 49-52

Launch EDB
~~~~~~~~~~
Launch the :class:`pyedb.Edb` class, using EDB 2023 R2 and SI units.

.. GENERATED FROM PYTHON SOURCE LINES 52-55

.. code-block:: Python


    edb = pyedb.Edb(edbpath=targetfolder, edbversion="2024.1")



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "C:\actions-runner\_work\pyedb\pyedb\examples\legacy_standalone\05_Plot_nets.py", line 53, in <module>
        edb = pyedb.Edb(edbpath=targetfolder, edbversion="2024.1")
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\generic\design_types.py", line 108, in Edb
        from pyedb.dotnet.edb import Edb as app
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\dotnet\edb.py", line 115, in <module>
        from pyedb.workflow import Workflow
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\workflow.py", line 4, in <module>
        import pandas as pd
    ModuleNotFoundError: No module named 'pandas'




.. GENERATED FROM PYTHON SOURCE LINES 56-59

Plot custom set of nets colored by layer
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Plot a custom set of nets colored by layer (default).

.. GENERATED FROM PYTHON SOURCE LINES 59-62

.. code-block:: Python


    edb.nets.plot("AVCC_1V3")


.. GENERATED FROM PYTHON SOURCE LINES 63-66

Plot custom set of nets colored by nets
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Plot a custom set of nets colored by nets.

.. GENERATED FROM PYTHON SOURCE LINES 66-69

.. code-block:: Python


    edb.nets.plot(["GND", "GND_DP", "AVCC_1V3"], color_by_net=True)


.. GENERATED FROM PYTHON SOURCE LINES 70-73

Plot all nets on a layer colored by nets
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Plot all nets on a layer colored by nets

.. GENERATED FROM PYTHON SOURCE LINES 73-76

.. code-block:: Python


    edb.nets.plot(None, ["1_Top"], color_by_net=True, plot_components_on_top=True)


.. GENERATED FROM PYTHON SOURCE LINES 77-80

Plot stackup and some padstack definition
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Plot all nets on a layer colored by nets

.. GENERATED FROM PYTHON SOURCE LINES 80-83

.. code-block:: Python


    edb.stackup.plot(scale_elevation=False, plot_definitions=["c100hn140", "c35"])


.. GENERATED FROM PYTHON SOURCE LINES 84-87

Close EDB
~~~~~~~~~
Close EDB.

.. GENERATED FROM PYTHON SOURCE LINES 87-89

.. code-block:: Python


    edb.close_edb()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.406 seconds)


.. _sphx_glr_download_examples_legacy_standalone_05_Plot_nets.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 05_Plot_nets.ipynb <05_Plot_nets.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 05_Plot_nets.py <05_Plot_nets.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
